--- a/Qırımtatarlar.mw
+++ b/Qırımtatarlar.mw
@@ -12,11 +12,11 @@
 |langs=[[Qırımtatar tili|Qırımtatar]], [[Rus tili|Rus]], [[Türk tili|Türk]]
 |related =
 }}
-'''Qırımtatarlar''' ya da '''Qırımlar''' — [[Qırım]]da yaşağan bir halq. [[Türkiy tiller|Türkiy til]] gruppasına mensüp olğan [[qırımtatar tili]]nde laf eteler.
+'''Qırımtatarlar''' ya da '''Qırımlar''' — [[Qırım]]da yaşağan bir halq. [[Türkiy tiller|Türkiy til]] zümresine mensüp olğan [[qırımtatar tili]]nde laf eteler.
 
 Esas qısmı Qırımda (260 biñge yaqın), qalğanları ise [[Türkiye]]de, [[Bulğaristan]]da, [[Romaniya]]da, [[Özbekistan]]da, [[Rusiye]]de oturalar. Türkiyedeki qırımtatar diasporası bayağı büyüktir.
 
-Qırımtatarlarnıñ çoqusı — [[İslâm|musulmanlar]] ([[sunniler]]), [[Anefi mezebi|Anefi]] [[Mezep|mezebine]] ait olalar.
+Qırımtatarlarnıñ çoqusı — [[İslâm|musulmanlar]] ([[sünniyler]]), [[Anefi mezebi|Anefi]] [[Mezep|mezebine]] ait olalar.
 
 == Tarih ==
 === Etnogenez ===
@@ -83,7 +83,7 @@ Kütleviy tarzda qırımtatarlar [[1989]] senesi avdet etip başladılar. Bugün
 [[1991]] senesi [[II Qurultay]] toplanğanınen qırımtatarlar milliy öz-özüni idare etme sisteması yaratıldı. Er beş yıl Qurultay saylavları ötkerile, Qurultaynı [[Qırımtatar Milliy Meclisi]] tize. [[1991|1991]] senesinden berli Meclisniñ almaştırılmağan reisi [[Mustafa Cemilev]]dir.
 
 == Din ==
-Qırımtatarlarnıñ çoqusı — [[İslâm|musulmanlar]] ([[Sunniler|sunniler]]). Qırımtatarlar İslâmğa dönüvi uzun müddetli olıp millet şekillenüvinen parallel tarzda keçmekte edi. Bu yoldaki ilki adım [[XIII]] asırda [[selcükler]] tarafından [[Sudaq]] ve onıñ civarını basıp alğanınen [[tasavvuf]] qardaşlıqları darqaluvı edi, soñki adım ise — [[1778]] senesindeki Qırımdan sürgün etilüvinden qaçınmağa istegenler Qırım [[hristianlar]]ınıñ kütleviy tarzda İslâmğa dönüvi edi. Qırım ealisiniñ ekseri ise İslâmğa Altın Ordu ve Qırım Hanlığı devirlerinde döndi. Şimdi Qırımda üç yüzge yaqın musulman cemaatı bar, olarnıñ ekseri [[Qırım Musulmanlarınıñ Diniy İdaresi]]ne birleşti ([[Anefi mezebi|Anefi]] [[Mezep|mezebine]] ait ola).
+Qırımtatarlarnıñ çoqusı — [[İslâm|musulmanlar]] ([[Sünniyler|sünniyler]]). Qırımtatarlar İslâmğa dönüvi uzun müddetli olıp millet şekillenüvinen parallel tarzda keçmekte edi. Bu yoldaki ilki adım [[XIII]] asırda [[selcükler]] tarafından [[Sudaq]] ve onıñ civarını basıp alğanınen [[tasavvuf]] qardaşlıqları darqaluvı edi, soñki adım ise — [[1778]] senesindeki Qırımdan sürgün etilüvinden qaçınmağa istegenler Qırım [[hristianlar]]ınıñ kütleviy tarzda İslâmğa dönüvi edi. Qırım ealisiniñ ekseri ise İslâmğa Altın Ordu ve Qırım Hanlığı devirlerinde döndi. Şimdi Qırımda üç yüzge yaqın musulman cemaatı bar, olarnıñ ekseri [[Qırım Musulmanlarınıñ Diniy İdaresi]]ne birleşti ([[Anefi mezebi|Anefi]] [[Mezep|mezebine]] ait ola).
 
 == Subetnoslar ==
 Qırımtatar halqı üç subetnik gruppadan ibarettir: ''noğaylar'', ''tatlar'' ve ''yalıboylular''.
