*Empty MediaWiki Message*

--- a/Edil.mw
+++ b/Edil.mw
@@ -15,7 +15,7 @@
 
 İdil qışnıñ üç ayında toñar. Bu zaman zarfında da özenden qara yolu olaraq faydalanılır.
 
-Bazı tarihçılarğa köre tarihiy Avropa [[Hunn]] ükümdarı [[Atilla]]nıñ ismi İdil özeninden kele: Atilla = İdilli.
+Bazı tarihçılarğa köre tarihiy Avropa [[Hun]] ükümdarı [[Atilla]]nıñ ismi İdil özeninden kele: Atilla = İdilli.
 
 [[Kategoriya:Özenler]]
 
