--- a/Leh_tili.mw
+++ b/Leh_tili.mw
@@ -34,6 +34,7 @@
 [[Kategoriya:Lehistandaki tiller]]
 
 [[af:Pools]]
+[[als:Polnische Sprache]]
 [[an:Idioma polonés]]
 [[ang:Polisc sprǣc]]
 [[ar:لغة بولندية]]
