--- a/Rusiye.mw
+++ b/Rusiye.mw
@@ -65,7 +65,7 @@
 [[ceb:Rusya]]
 [[cs:Rusko]]
 [[csb:Ruskô]]
-[[cu:Рѡсїꙗ]]
+[[cu:Рѡсі́ꙗ]]
 [[cv:Раççей Патшалăхĕ]]
 [[cy:Ffederasiwn Rwsia]]
 [[da:Rusland]]
