--- a/Viyana.mw
+++ b/Viyana.mw
@@ -51,7 +51,7 @@
 [[hr:Beč]]
 [[ht:Vyèn]]
 [[hu:Bécs]]
-[[hy:Վիենա]]
+[[hy:Վիեննա]]
 [[ia:Vienna]]
 [[id:Wina]]
 [[io:Wien]]
@@ -72,6 +72,7 @@
 [[lt:Viena]]
 [[lv:Vīne]]
 [[mk:Виена]]
+[[ml:വിയന്ന]]
 [[mn:Вена]]
 [[mr:व्हियेना]]
 [[nah:Viena]]
