--- a/Veyisköy.mw
+++ b/Veyisköy.mw
@@ -63,3 +63,4 @@ Veyisköylülerniñ müim bir qısmı 1950 senelerinde tekrardan icret etmege me
 [[Kategoriya:Bulğaristandaki Qırımtatar diasporası]]
 
 [[bg:Бобовец]]
+[[ru:Бобовец]]
