--- a/Saq_rayonı.mw
+++ b/Saq_rayonı.mw
@@ -2,8 +2,8 @@
 | runame = Сакский район
 | ukname = Сакський район
 | qrname = Saq rayonı
-| arms = 
-| flag = [[Image:Saky-rayon-flag.gif|120px]]
+| arms = [[Resim:Saky rs.gif|120px]]
+| flag = [[Resim:Saky-rayon-flag.gif|120px]]
 | capital = [[Saq]]
 | area = 2 257
 | arearank = 3-ünci
