*Empty MediaWiki Message*

--- a/Slovakiya.mw
+++ b/Slovakiya.mw
@@ -36,6 +36,10 @@
 }}
 '''Slovakiya''', resmiy adı '''Slovak Cumhuriyeti''' ([[slоvak tili|slоvakça]] ''Slоvenskо'', ''Slovenská republika'') - merkeziy [[Avropa]]da bir devlet.
 
+== Bağlantılar ==
+* [http://www.slovakia.sk/ Slovakiya]
+* [http://www.zones.sk/ Zones], Slovakiya Zones
+
 {{Avropa Birligi}}
 {{Avropa}}
 
