--- a/El_Salvador.mw
+++ b/El_Salvador.mw
@@ -62,7 +62,7 @@
 [[lb:El Salvador]]
 [[ln:El Salvador]]
 [[lt:Salvadoras]]
-[[lv:Salvadora (valsts)]]
+[[lv:Salvadora]]
 [[mk:Ел Салвадор]]
 [[mr:एल साल्वाडोर]]
 [[ms:El Salvador]]
