*Empty MediaWiki Message*

--- a/İstanbul.mw
+++ b/İstanbul.mw
@@ -28,8 +28,8 @@
  |iklim                      = 
  |resmiy til                 = 
  |resmiy til-ref             = 
-  |eali                      = 10 034 830
-  |cedvelge aluv senesi      = 2006
+  |eali                      = 12 573 836
+  |cedvelge aluv senesi      = 2007 (Tüik)
   |eali sıqlığı              = 6521
   |aglomeratsiya             = 
   |milliy terkip             = 
