*Empty MediaWiki Message*

--- a/İstanbul.mw
+++ b/İstanbul.mw
@@ -29,7 +29,7 @@
  |resmiy til                 = 
  |resmiy til-ref             = 
   |eali                      = 12 573 836
-  |cedvelge aluv senesi      = 2007 (Tüik)
+  |cedvelge aluv senesi      = 2007 Tüik
   |eali sıqlığı              = 6521
   |aglomeratsiya             = 
   |milliy terkip             = 
