--- a/Gümüşhane_(il).mw
+++ b/Gümüşhane_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Gümüshane Turkey Provinces locator.jpg|300px|thumb|Gümüşhane vilâyeti]]
+[[Image:Gümüşhane_Turkey_Provinces_locator.jpg|300px|thumb|Gümüşhane vilâyeti]]
 '''Gümüşhane''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 {{Türkiyeniñ illeri}}
