*Empty MediaWiki Message*

--- a/Viyana.mw
+++ b/Viyana.mw
@@ -1,6 +1,8 @@
 [[Resim:Austria wien.svg|thumb|right|200px|Viyana]]
 '''Viyana''' ([[Alman tili|almanca]] ''Wien'') - [[Avstriya]]nıñ paytahtı.
 
+* [http://www.wienbilder.at/ Viyana] 
+
 {{commons|Vienna}}
 
 [[Kategoriya:Viyana| ]]
