*Empty MediaWiki Message*

--- a/Slovakiya.mw
+++ b/Slovakiya.mw
@@ -37,8 +37,7 @@
 '''Slovakiya''', resmiy adı '''Slovak Cumhuriyeti''' ([[slоvak tili|slоvakça]] ''Slоvenskо'', ''Slovenská republika'') - merkeziy [[Avropa]]da bir devlet.
 
 == Bağlantılar ==
-* [http://www.slovakia.sk/ Slovakiya]
-* [http://www.zones.sk/ Zones], Slovakiya Zones
+*[http://www.government.gov.sk/english/ The Slovak Republic Government Office]
 
 {{Avropa Birligi}}
 {{Avropa}}
