*Empty MediaWiki Message*

--- a/Slavân_tilleri.mw
+++ b/Slavân_tilleri.mw
@@ -6,28 +6,41 @@
 '''Slavân tilleri''' — [[İnd-Avrоpa tilleri|İnd-Avrоpa til ailesiniñ]] bir gruppasıdır.
 
 * '''Şarqiy slavân tilleri'''
-** Belоrus tili
+** Qadimiy şarqiy slavân tili †
+** [[Ruten tili|Ruten]] †
+*** Belarus
+*** Rusin
+*** [[Ukrain tili|Ukrain]]
 ** [[Rus tili|Rus tili]]
-** Rusin tili
-** [[Ukrain tili|Ukrain tili]]
-** Qadimiy rus tili †
 * '''Ğarbiy slavân tilleri'''
-** [[Aşağı Sorb tili]]
-** [[Çeh tili]]
-** [[Kaşub tili]]
-** [[Leh tili]]
-** Slоvak tili
-** [[Yuqarı Sorb tili]]
-** Polab tili †
+** Sorb sektsiyası
+*** [[Aşağı Sorb tili]]
+*** [[Yuqarı Sorb tili]]
+** Lehit sektsiyası
+*** [[Leh tili]]
+*** Pomeran †
+**** [[Kaşub tili|Kaşub]]
+**** Slovin †
+** Polab †
+** [[Silez tili|Silez]] †
+** Çeh-Slоvak sektsiyası
+*** Slоvak
+*** [[Çeh tili|Çeh]]
 * '''Cenübiy slavân tilleri'''
-** Bulğar tili
-** Makedоn tili
-** Sırb tili
-** Hırvat tili
-** Bоsnak tili
-** Slоven tili
-** Kilse slavân tili †
+** Şarqiy sektsiyası
+*** Slоven 
+*** Sırb-Hırvat 
+**** Sırb 
+**** Hırvat 
+**** Bоsnak 
+**** Montenegro
+** Ğarbiy sektsiyası
+** Bulğar 
+** Makedоn 
+** Eski Kilse slavân †
 
+{{Slavân tilleri}}
+ 
 [[Kategoriya:Slavân tilleri| ]]
 
 [[af:Slawiese tale]]
