*Empty MediaWiki Message*

--- a/Slavân_tilleri.mw
+++ b/Slavân_tilleri.mw
@@ -7,11 +7,11 @@
 
 * '''Şarqiy slavân tilleri'''
 ** Qadimiy şarqiy slavân tili †
-** [[Ruten tili|Ruten]] †
-*** Belarus
-*** Rusin
-*** [[Ukrain tili|Ukrain]]
-** [[Rus tili|Rus tili]]
+*** [[Ruten tili|Ruten]] †
+**** Belarus
+**** Rusin
+**** [[Ukrain tili|Ukrain]]
+*** [[Rus tili|Rus tili]]
 * '''Ğarbiy slavân tilleri'''
 ** Sorb sektsiyası
 *** [[Aşağı Sorb tili]]
@@ -21,8 +21,8 @@
 *** Pomeran †
 **** [[Kaşub tili|Kaşub]]
 **** Slovin †
-** Polab †
-** [[Silez tili|Silez]] †
+*** Polab †
+*** [[Silez tili|Silez]] †
 ** Çeh-Slоvak sektsiyası
 *** Slоvak
 *** [[Çeh tili|Çeh]]
