*Empty MediaWiki Message*

--- a/Slavân_tilleri.mw
+++ b/Slavân_tilleri.mw
@@ -35,9 +35,9 @@
 **** Bоsnak 
 **** Montenegro
 ** Ğarbiy sektsiyası
-** Bulğar 
-** Makedоn 
-** Eski Kilse slavân †
+*** Bulğar 
+*** Makedоn 
+*%* Eski Kilse slavân †
 
 {{Slavân tilleri}}
  
