The file [[:Image:Kok_Bayraq.svg]] has been removed, as it has been deleted by [[:commons:User:ABF]]: ''Deleted because "Was in [[w:commons:Category:Unknown as of 19 May 2008]]; still missing [[w:commons:COM:L|essential information]][[w:commons:COM:F

--- a/Qırımtatarlar.mw
+++ b/Qırımtatarlar.mw
@@ -1,6 +1,6 @@
 {{Halq|
 |group=Qırımtatarlar, Qırımlar
-|image=[[Image:Kok Bayraq.svg|center|225px]]
+|image=
 |caption= [[Qırımtatar bayrağı]]
 |poptime= 500,000 - 2,000,000
 |popplace=[[Qırım]]:<br> &nbsp;&nbsp; 260,000 <br />
