*Empty MediaWiki Message*

--- a/Türkiy_devletler.mw
+++ b/Türkiy_devletler.mw
@@ -28,7 +28,7 @@
 ** [[Resim:Flag of Dagestan.svg|50px]] [[Dağıstan Cumhuriyeti]] - ([[Qumıqlar]]: [[Image:Flag of the Kumukh people.png|50px]] ve [[Noğaylar]]: [[Resim:Flag of the Nogai people.png|50px]]) - [[Rusiye]]
 ** [[Resim:Flag of Kabardino-Balkaria.svg|50px]] [[Qabada-Balqar Cumhuriyeti]] ([[Balqarlar]]) - [[Rusiye]]
 ** [[Resim:Flag of Karachay-Cherkessia.svg|50px]] [[Qaraçay-Çerkes Cumhuriyeti]] ([[Qaraçaylar]]) - [[Rusiye]]
-** [[Resim:Flag of Crimea.svg|50px]] [[Qırım Muhtar Cumhuriyeti]] - ([[Qırımtatarlar]]:[[Image:Kok Bayraq.png|50px]]) - [[Ukraina]]
+** [[Resim:Flag of Crimea.svg|50px]] [[Qırım Muhtar Cumhuriyeti]] - ([[Qırımtatarlar]]:[[Image:Kok Bayraq.PNG|50px]]) - [[Ukraina]]
 
 [[Kategoriya:Türkiy memleketler| ]]
 
