*Empty MediaWiki Message*

--- a/Qırımtatarlar.mw
+++ b/Qırımtatarlar.mw
@@ -1,6 +1,6 @@
 {{Halq|
 |group=Qırımtatarlar, Qırımlar
-|image=
+|image=[[Image:Kok Bayraq.PNG|center|225px]]
 |caption= [[Qırımtatar bayrağı]]
 |poptime= 500,000 - 2,000,000
 |popplace=[[Qırım]]:<br> &nbsp;&nbsp; 260,000 <br />
