--- a/Silez_tili.mw
+++ b/Silez_tili.mw
@@ -1,3 +1,29 @@
+{{Til
+ |renk          = İnd-Avropa
+ |ad            = Silez tili
+ |öz adı        = ślůnsko godka
+ |memleketler   = [[Lehistan]], [[Çehiya]]
+ |regionlar     = [[Sileziya]]
+ |resmiy til    = 
+ |teşkilât      =
+ |kişi sayısı   = 2 million
+ |sıra          = 
+ |al            =
+ |ölgen zamanı  =
+ |kategoriya    = Slavân tilleri
+ |sınıflaştırma =
+[[İnd-Avrоpa tilleri|İnd-Avrоpa]]
+:[[Slavân tilleri|Slavân]]
+::[[Ğarbiy Slavân tilleri|Ğarbiy Slavân]]
+:::[[Lehit tilleri|Lehit]]
+::::Silez tili
+ |elifbe        = [[latin elifbesi]]
+ |ISO1          = 
+ |ISO2          = 
+ |ISO3          = szl
+ |vikiad        = Silezce
+ |vikikod       = szl
+}} 
 '''Silez tili''' ya da '''şlonska tili''' (öz adı  ''ślůnsko godka'') - ğarbiy [[Slavân tilleri|slavân]] gruppasından bir tildir, [[Lehistan]]daki [[Sileziya]] regionında cayılınğandır. Silez tiliniñ taşıyıcılar sayısı 1 200-ge yaqın.
 
 {{commonscat|category:Silesian language}}
