*Empty MediaWiki Message*

--- a/Slavân_tilleri.mw
+++ b/Slavân_tilleri.mw
@@ -22,7 +22,7 @@
 **** [[Kaşub tili|Kaşub]]
 **** Slovin †
 *** Polab †
-*** [[Silez tili|Silez]] †
+*** [[Silez tili|Silez]]
 ** Çeh-Slоvak sektsiyası
 *** Slоvak
 *** [[Çeh tili|Çeh]]
