*Empty MediaWiki Message*

--- a/Lugansk.mw
+++ b/Lugansk.mw
@@ -40,7 +40,7 @@
  |identifikator türü         = 
  |raqamlı identifikator      = 
  |Commons                    = Luhansk
- |sayt                       = http://kmv.gov.ua/
+ |sayt                       = http://gorod.lugansk.ua/
  |sayt tili                  = ru
 }}
 '''Luhansk''' (''Lugansk'', {{Lang-uk|Луганськ}} {{IPA|[lu'ɦɑnʲsʲk]}}, {{Lang-ru|Луганск}}) - [[Ukraina]]nıñ şeer.
