*Empty MediaWiki Message*

--- a/Lugansk.mw
+++ b/Lugansk.mw
@@ -14,6 +14,8 @@
  |memleket haritasınıñ büyükligi   = 300
  |region1 haritasınıñ büyükligi    =
  |region2 haritasınıñ büyükligi    =
+ |region1 türü               = Vilâyet
+ |region1                    = Luhansk vilâyeti
  |içki bölünüv               = 4 rayon
  |baş türü                   = 
  |baş                        = 
@@ -43,8 +45,33 @@
  |sayt                       = http://gorod.lugansk.ua/
  |sayt tili                  = ru
 }}
-'''Luhansk''' (''Lugansk'', {{Lang-uk|Луганськ}} {{IPA|[lu'ɦɑnʲsʲk]}}, {{Lang-ru|Луганск}}) - [[Ukraina]]nıñ şeer.
-Ealisiniñ sayısı 456 000 kişi ([[2005]] senesi)
+'''Luhansk''' (''Lugansk'', {{Lang-uk|Луганськ}} {{IPA|[lu'ɦɑnʲsʲk]}}, {{Lang-ru|Луганск}}) - şarqiy [[Ukraina]]da bir şeer. Ealisiniñ sayısı 456 000 kişi ([[2005]] senesi)
 
 {{commons|Luhansk}}
+
 [[Category:Ukraina]]
+
+[[be-x-old:Луганскае]]
+[[bg:Луганск]]
+[[cs:Luhansk]]
+[[de:Luhansk]]
+[[en:Luhansk]]
+[[es:Luhansk]]
+[[et:Lugansk]]
+[[fi:Luhansk]]
+[[fr:Louhansk]]
+[[he:לוהנסק]]
+[[hu:Luhanszk]]
+[[it:Luhans'k]]
+[[ko:루한시크]]
+[[lt:Luhanskas]]
+[[lv:Luganska]]
+[[nl:Loehansk]]
+[[no:Luhansk]]
+[[pl:Ługańsk]]
+[[ro:Luhansk]]
+[[ru:Луганск]]
+[[sv:Luhansk]]
+[[uk:Луганськ]]
+[[vo:Luhansk]]
+[[zh:卢甘斯克]]
