--- a/Muğla_(il).mw
+++ b/Muğla_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Mugla Turkey Provinces locator.jpg|300px|thumb|Muğla vilâyeti]]
+[[Image:Muğla_Turkey_Provinces_locator.jpg|300px|thumb|Muğla vilâyeti]]
 '''Muğla''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 {{commonscat|Category:Muğla}}
 {{Türkiyeniñ illeri}}
