*Empty MediaWiki Message*

--- a/Slavân_tilleri.mw
+++ b/Slavân_tilleri.mw
@@ -8,8 +8,8 @@
 * '''Şarqiy slavân tilleri'''
 ** Qadimiy şarqiy slavân tili †
 *** [[Ruten tili|Ruten]] †
-**** Belarus
-**** Rusin
+**** [[Belarus tili|Belarus]]
+**** [[Rusin tili|Rusin]]
 **** [[Ukrain tili|Ukrain]]
 *** [[Rus tili|Rus tili]]
 * '''Ğarbiy slavân tilleri'''
@@ -23,21 +23,23 @@
 **** Slovin †
 *** Polab †
 *** [[Silez tili|Silez]]
-** Çeh-Slоvak sektsiyası
-*** Slоvak
+** Çeh-Slоvak sektsiya
+*** [[Slоvak tili|Slovak]]
 *** [[Çeh tili|Çeh]]
 * '''Cenübiy slavân tilleri'''
 ** Şarqiy sektsiyası
-*** Slоven 
-*** Sırb-Hırvat 
+*** [[Slоven tili|Sloven]] 
+*** [[Sırb-Hırvat tili|Sırb-Hırvat]] 
 **** Sırb 
 **** Hırvat 
 **** Bоsnak 
 **** Montenegro
-** Ğarbiy sektsiyası
-*** Bulğar 
-*** Makedоn 
+** Ğarbiy sektsiya
+*** [[Bulğar tili|Bulğar]] 
+*** [[Makedоn tili|Makedоn]] 
 *** Eski Kilse slavân †
+
+İzaat: † - ölü tiller.
 
 {{Slavân tilleri}}
  
