--- a/Uşak_(il).mw
+++ b/Uşak_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Usak Turkey Provinces locator.jpg|300px|thumb|Uşak vilâyeti]]
+[[Image:Uşak_Turkey_Provinces_locator.jpg|300px|thumb|Uşak vilâyeti]]
 '''Uşak''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 {{Türkiyeniñ illeri}}
