http://www.shamilalyadin.com/

--- a/Şamil_Alâdin.mw
+++ b/Şamil_Alâdin.mw
@@ -34,7 +34,7 @@ Yazıcınıñ tarihiy vaqialarğa bağışlap yañı yazıp başlağan «Toğay 
 Şamil Alâdinniñ yaratıcılığınıñ diapazonı ğayet keniş olıp, çeşit janrlarda icat etken, büyük kölemli eserler – romanlar ve povestler yaratqan, acayip esse, ikâyeler yazğan, oçerkler ve publitsistik maqalelernen muntazam surette çıqışta bulunğan zemaneviy yazıcı edi.
 
 == Bağlantılar ==
-
+* [http://www.shamilalyadin.com/ shamilalyadin.com]
 * Safiye Kasse-İbraimova. [http://www.goloskrima.com/?p=82  Шамиль Алядин был творческой личностью и имел огромный авторитет] [[Qırım Sedası]], 2008-03-28 {{ru icon}}
 
 {{DEFAULTSORT:Alâdin, Şamil}}
