*Empty MediaWiki Message*

--- a/Aqmescit.mw
+++ b/Aqmescit.mw
@@ -51,7 +51,7 @@
  |sayt                       = http://www.simferopol-rada.gov.ua/
  |sayt tili                  =
 }}
-'''Aqmescit''' ({{lang-uk|Сімферополь}}, {{lang-ru|Симферополь}}) – merkeziy [[Qırım]]da [[Salğır özeni]] boyunda yerleşken büyük bir şeerdir, Qırımnıñ paytahtı.
+'''Aqmescit''' ({{lang-uk|Сімферополь}}, {{lang-ru|Симферополь}}) – merkeziy [[Qırım]]da [[Salğır]] özeni boyunda yerleşken büyük bir şeerdir, Qırımnıñ [[paytaht]]ı.
 
 Rus ve başqa yabancı tillerinde [[yunan tili]]nden alınma "Simferopol" adı (yunanca Συμφερουπολη - "fayda şeeri") qullanılmaqta.
 
