*Empty MediaWiki Message*

--- a/Qırım_Müendislik_ve_Pedagogika_Universiteti.mw
+++ b/Qırım_Müendislik_ve_Pedagogika_Universiteti.mw
@@ -1,6 +1,6 @@
-'''Qırım Müendislik ve Pedagogika Universiteti''' ('''QMPU''') - [[Aqmescit]] şeerinde yerleşken üniversitetlerden birevidir. Universitet Qırım içün pedagogika, müendislik ve ilim saasında mütehassıslar yetiştire.
+'''Qırım Müendislik ve Pedagogika Universiteti''', '''QMPU''' ({{lang-ru|АКрымский инженерно-педагогический университет}}) - [[Aqmescit]] şeerinde yerleşken üniversitetlerden birevidir. Universitet Qırım içün pedagogika, müendislik ve ilim saasında mütehassıslar yetiştire.
 
-Universitet [[Qırım Muhtar Cumhuriyeti]] [[Qırım Muhtar Cumhuriyeti Nazirler Şurası|Nazirler Şurasınıñ]] qanunı ile [[1993]] senesinde quruldı ve [[1994]] senesinde aliy oquv faaliyetlerine başladı. Universitetniñ qurucısı Prof. Dr. [[Fevzi Yaqubov]] bugünge qadar rektorlıqnı devam ettire. Bugün uzaqtan oquğanlar ile beraber üniversitette beş biñden ziyade talebe tasil ala. Derslerni yüzden ziyade alim keçire.<ref>http://kipu.crimea.ua/2007/09/06/istorija-universiteta.html</ref>
+Universitet [[Qırım Muhtar Cumhuriyeti]] [[Qırım Muhtar Cumhuriyeti Nazirler Şurası|Nazirler Şurasınıñ]] qanunı ile [[1993]] senesinde quruldı ve [[1994]] senesinde aliy oquv faaliyetlerine başladı. Universitetniñ qurucısı Prof. Dr. [[Fevzi Yaqubov]] bugünge qadar rektorlıqnı devam ettire. Bugün uzaqtan oquğanlar ile beraber üniversitette beş biñden ziyade talebe tasil ala. Derslerni yüzden ziyade alim keçire.<ref>http://kipu.crimea.ua/2007/09/06/istorija-universiteta.html</ref> <ref>http://kr-eho.info/index.php?name=News&op=article&sid=811</ref>
 
 == Menbalar ==
 
