--- a/Tekirdağ_(il).mw
+++ b/Tekirdağ_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Tekirdag Turkey Provinces locator.jpg|300px|thumb|Tekirdağ vilâyeti]]
+[[Image:Tekirdağ_Turkey_Provinces_locator.jpg|300px|thumb|Tekirdağ vilâyeti]]
 '''Tekirdağ''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 {{Türkiyeniñ illeri}}
