--- a/Qıtay.mw
+++ b/Qıtay.mw
@@ -1,6 +1,9 @@
 '''Qıtay''':
 
-* [[Qırım]]da bir qaç köyniñ adı
+* [[Qırım]]da bir qaç köyniñ adı:
+*# [[Qıtay, Aqmescit|Qıtay]] (Şirokoye), [[Qıtay, Aqmescit|Qıtay]] köy şurası, [[Aqmescit rayonı]]
+*# [[Qıtay, Yedi Quyu|Qıtay]] (Libknehtovka), [[Dere Salın]] köy şurası, [[Yedi Quyu rayonı]]
+*# [[Meçetli Qıtay]] (Stolbovoye), [[Totay]] köy şurası, [[Canköy rayonı]]
 * [[Çin]] memleketiniñ başqa adı
 
 {{Disambig}}
