*Empty MediaWiki Message*

--- a/Üsein_Kürkçi.mw
+++ b/Üsein_Kürkçi.mw
@@ -2,7 +2,7 @@
 
 Üsein Kürkçi [[1905]] senesi [[yanvar 23]]-te [[Bağçasaray]] şeerinde Arslan Ağa maallesinde kürkçüler esnafınıñ usta başı Osman molla Sali oğlu Kürkçiniñ qorantasında doğa. Başlanğıç tasilini maallelerindeki mektepte [[Yaqub Şakir-Ali]]de, soñra zemstvo mektebinde ve 1918 senesi Bağçasaray da açılğan İsmail Gasprinskiy adına Dar ül-Mualliminde [[Yağya Bayburtlı]], [[İbraim Meinov]], [[Üsein Badaninskiy]], [[İbraim İlmiy]], [[Şeyh Vehbi]] kibi belli ocalarla tanış ola.
 
-Qırımtatarlarnıñ o zamandaki medeniy ayatı qaynağan Bağçasarayda yaş Üsein halqınıñ pek çoq ileri adamlarını köre ve tanıy edi. Şu cümleden [[İsmail Gasprinskiy]]ni de defalarca toylarda körgen edi. Onıñ aytqanlarına kore, İsmail Gasprinskiy çağırılğan toy azbarına kirgende, çalğıcılar onıñ (İsmail beyniñ) sevgen avası – "Aqsaq Timurnıñ marşı"nı icra ete, toynıñ cemaatı ise onı ayaqqa turıp qarşılay eken.
+Qırımtatarlarnıñ o zamandaki medeniy ayatı qaynağan Bağçasarayda yaş Üsein halqınıñ pek çoq ileri adamlarını köre ve tanıy edi. Şu cümleden [[İsmail Gasprinskiy]]ni de defalarca toylarda körgen edi. Onıñ aytqanlarına köre, İsmail Gasprinskiy çağırılğan toy azbarına kirgende, çalğıcılar onıñ (İsmail beyniñ) sevgen avası – "Aqsaq Timurnıñ marşı"nı icra ete, toynıñ cemaatı ise onı ayaqqa turıp qarşılay eken.
 
 [[1922]] senesi [[Aqmescit]]te Rus nümüne orta mektebiniñ soñki sınıfında oquğan soñ, [[Baqu]]ğa kete, anda Azerbaycan pedagogika institutınıñ tarih-edebiyat fakultetine kire, belli alimler: şarqşınas, akademik V. Bartoldnıñ, professorlardan İ. İkmetniñ, [[Bekir Çoban-zade]]niñ, G. Gubaydulinniñ oglerinde tasil köre. Bu yıllarda rus ve çetel klassik edebiyatından bir sıra tercimeler yapa. İnstitutnın bitirip Qırımğa qayta, bir qaç yıl Qırımtatar mekteplerinde, "Oquv işleri" metodik ve içtimaiy-edebiy gazetasınıñ edebiyat bölüginde çalışa soñra Qırım pedagogika institutınıñ til ve edebiyat fakultetiniñ yüksek bolumunda oquy.
 
