--- a/Qırım_Halq_Cumhuriyeti.mw
+++ b/Qırım_Halq_Cumhuriyeti.mw
@@ -95,3 +95,4 @@ Böyleliknen tarihta ilk Qırımtatar Cumhuriyeti yoq oldı.
 [[Kategoriya:Qırım tarihı]]
 
 [[tr:Kırım Halk Cumhuriyeti]]
+[[uk:Кримська Народна Республіка]]
