{{lang-pl|język polski}}.

--- a/Leh_tili.mw
+++ b/Leh_tili.mw
@@ -24,7 +24,8 @@
  |vikikod       = pl
 }} 
 [[Resim:Polish-alphabet.png|thumb|left|Leh elifbesi]]
-'''Leh tili''' (lehçe ''język polski'') - ğarbiy [[Slavân tilleri|slavân]] gruppasından bir tildir, [[Lehistan]]nıñ resmiy tili.
+'''Leh tili''' ({{lang-pl|język polski}}) - ğarbiy [[Slavân tilleri|slavân]] gruppasından bir tildir, [[Lehistan]]nıñ resmiy tili.
+
 
 {{commonscat|category:Polish language}}
 
@@ -32,6 +33,7 @@
 
 [[Kategoriya:Slavân tilleri]]
 [[Kategoriya:Lehistandaki tiller]]
+
 
 [[af:Pools]]
 [[als:Polnische Sprache]]
