The file [[:Image:LocationSouthKorea.png]] has been replaced by [[:Image:LocationSouth_Korea.png]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Cenübiy_Koreya.mw
+++ b/Cenübiy_Koreya.mw
@@ -3,7 +3,7 @@
 |Original adı = 대한민국<br><small>/Daehan Minguk/</small>
 |Bayraq =  Flag of South Korea.svg
 |Gerb =Coat_of_arms_of_South_Korea.svg
-|Harita =  LocationSouthKorea.png
+|Harita =LocationSouth_Korea.png
 |Gimn = Aegukga 
 |Til =  [[Koreya tili]]
 |Paytaht =  [[Seul]]
