--- a/Şanlıurfa_(il).mw
+++ b/Şanlıurfa_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Sanliurfa Turkey Provinces locator.jpg|310px|thumb|Şanlıurfa vilâyeti]]
+[[Image:Şanlıurfa_Turkey_Provinces_locator.jpg|310px|thumb|Şanlıurfa vilâyeti]]
 '''Şanlıurfa''' - [[Türkiye|Türkiye Cumhuriyeti]]nde bir vilâyet.
 
 {{Türkiyeniñ illeri}}
