*Empty MediaWiki Message*

--- a/Monako.mw
+++ b/Monako.mw
@@ -5,8 +5,8 @@
 |Original adı 2 = Múnegu
 |Resmiy Original adı = Principauté de Monaco
 |Resmiy Original adı 2 = Principatu de Múnegu
-|Bayraq =  Monaco_flag.gif
-|Gerb =  Coat of arms of Monaco.png
+|Bayraq = Flag of Monaco.svg
+|Gerb =  Coat of arms of Monaco.svg
 |Harita =  Europe_location_MCO.png
 |Şiar = Deo Juvante 
 |Şiar tercimesi =  Allanıñ yardımı ile
