*Empty MediaWiki Message*

--- a/Çubuqlı_davul.mw
+++ b/Çubuqlı_davul.mw
@@ -2,3 +2,4 @@
 '''Çubuqlı davul''' iylengen buzav terisinden yapıla. Teri büyük qasnaqnıñ eki tarafına tarttırıla. Onıñ sağ tarafına ise çoqmarnen urula, sol tarafına ise çubuqnen urulıp çalına. Sağ tarafınıñ davuşı sol tarafına köre alçaqça ola. Davulnıñ qasnağına bir metrden ziyade uzunlıqta qayış pekitile. Bu qayışnen icracı davulnı boynuna asa ve ayaq üstünde turıp çala.
 
 [[Kategoriya:Qırımtatar milliy muzıkası]]
+[[en:davul]]
