*Empty MediaWiki Message*

--- a/Dare.mw
+++ b/Dare.mw
@@ -1,3 +1,9 @@
 '''Dare''' mahsus azırlanğan [[ağaç]] qasnaqqa [[qoy]], [[eçki]] yaki [[balıq]] terisi tarttırılıp yapıla. Qasnaqnıñ çetleri oyulıp, anda tögerek etip kesilgen yezden üç-dört çift zil pekitile. Qasnaqnıñ özü emen ağaçından qayırılıp yapıla. Dare çaluv ustalığı dareciden büyük canbazlıq talap ete. Dare hususan [[Qırım]]nıñ [[çöl tarafı]]nda ziyade qullanıla, onsuz iç bir tantana, iç bir cıyın olmay edi.
 
 [[Kategoriya:Qırımtatar milliy muzıkası]]
+[[bg:Дайре]]
+[[hr:Dajre]]
+[[mk:%D0%94%D0%B0%D1%98%D1%80%D0%B5]]
+[[sr:Даире (инструмент)]]
+[[tg:Доира]]
+[[en:Dayereh]]
