--- a/Tulup_zurna.mw
+++ b/Tulup_zurna.mw
@@ -2,3 +2,5 @@
 '''Tulup zurna''' - çobanlarnıñ çalğı aletidir (volınka). Tulup zurnanıñ kürkü bütün etip sıdırılıp alınğan eçki yaki qoy terisinden yapıla. Tögerek çeti qapalı bu kürkke üç dane boruçıq (trubkaçıq) qoyula: içine ava toldurmaq içün (bu bоruçıqta avanıñ keri çıqarılması içün mahsus klapan da yapıla), çalmaq içün ve zil tutmaq içün. Çalmaq içün yapılğan qavalçıqnıñ tili qamıştan yahut qaz qanatından yapıla. Onıñ sesler sırası seksta köleminde olıp, diatoniktir. Tulup zurnanıñ davuşı keskin ve kergindir. Çalğan vaqıtta kürkü qoltuq tübünde tutulıp, onı qolnen basıp turasıñ.
 
 [[Kategoriya:Qırımtatar milliy muzıkası]]
+[[ru:Волынка]]
+[[uk:Волинка]]
