--- a/Hansaray.mw
+++ b/Hansaray.mw
@@ -29,3 +29,6 @@ Hansaraynıñ temelli ilmiy tamirlenmesi tek 1960 yılları başladı. Onıñ ne
 
 [[Kategoriya:Qırım Hanlığı]]
 [[Kategoriya:Bağçasaray]]
+[[en:Bakhchisaray Palace]]
+[[fr:Hansaray]]
+[[tr:Hansaray]]
