--- a/Qaval.mw
+++ b/Qaval.mw
@@ -1,3 +1,5 @@
+[[Image:Kaval.gif|thumb|A 1919 Kaval. Bone ferrules decorated on the lathe with turned grooves and bird's eye decorations are applied with a preshaped cutting tool.]]
+
 '''Qaval''' - sızğırtmaq tarzında üfürip çalınğan ve çeşit ağaçlardan yapılğan alettir. Uzunlığı 250-300 mm olıp, ağaçtan qolnen yonılıp yapıla. Qavalnıñ içi tsilindr şekilinde ola. Üst tarafında altı-yedi teşik ve astında bir teşik ola. Sesler sırası diatoniktir. Sesler kölemi qavalnıñ uzunlığına ve teşiklerniñ sayısına bağlı.
 
 Qaval da, tulup-zurna kibi, çobanlarnıñ çalğı aletidir. Şimdi o, ansambllerde solo çalğan alet olaraq qullanıla.
