*Empty MediaWiki Message*

--- a/Hansaray.mw
+++ b/Hansaray.mw
@@ -1,4 +1,4 @@
-'''Hanasaray''' - [[Bağçasaray]] şeerinde bulunğan [[Qırım Hanlığı|Qırım hanlarınıñ]] sarayıdır.
+'''Hansaray''' - [[Bağçasaray]] şeerinde bulunğan [[Qırım Hanlığı|Qırım hanlarınıñ]] sarayıdır.
 
 [[Resim:Hansaray.jpg|thumb|right|270px|Hansaray]]
 
