--- a/Arif.mw
+++ b/Arif.mw
@@ -10,3 +10,56 @@ Bazı elifbelerdeki arifler:
 *[[Yunan alfabesi]]: α, β, γ, δ, ε, ζ, η, θ, ι, κ, λ, μ, ν, ξ, ο, π, ρ, σ, τ, υ, φ, χ, ψ, ω
 
 [[Kategoriya:Yazı]]
+
+[[als:Buchstabe]]
+[[ar:حرف]]
+[[ast:Lletra]]
+[[az:Hərf]]
+[[be-x-old:Літара]]
+[[bg:Буква]]
+[[br:Lizherenn]]
+[[ca:Lletra (grafia)]]
+[[cs:Písmeno]]
+[[cv:Саспалли]]
+[[da:Bogstav]]
+[[de:Buchstabe]]
+[[en:Letter (alphabet)]]
+[[eo:Litero]]
+[[es:Letra]]
+[[et:Täht (kiri)]]
+[[fi:Kirjain]]
+[[fr:Lettre (typographie)]]
+[[gl:Letra]]
+[[he:אות]]
+[[hr:Slovo]]
+[[ht:Lèt]]
+[[is:Bókstafur]]
+[[it:Lettera (alfabeto)]]
+[[jbo:lerfu]]
+[[ka:ასო (ნიშანი)]]
+[[kab:Asekkil]]
+[[la:Littera]]
+[[lt:Raidė]]
+[[lv:Burts]]
+[[mk:Буква]]
+[[ml:അക്ഷരം]]
+[[mr:अक्षर]]
+[[nds:Bookstaav]]
+[[nl:Letter]]
+[[os:Дамгъæ]]
+[[pl:Litera]]
+[[pt:Letra]]
+[[ru:Буква]]
+[[scn:Littra (signu gràficu)]]
+[[simple:Letter]]
+[[sk:Písmeno]]
+[[sl:Črka]]
+[[sq:Shkronja]]
+[[sr:Слово]]
+[[sv:Bokstav]]
+[[sw:Herufi]]
+[[tr:Harf]]
+[[uk:Літера]]
+[[uz:Harf]]
+[[yi:אות]]
+[[zh:字母]]
