*Empty MediaWiki Message*

--- a/Hansaray.mw
+++ b/Hansaray.mw
@@ -27,8 +27,29 @@ Hansaraynıñ temelli ilmiy tamirlenmesi tek 1960 yılları başladı. Onıñ ne
 
 2003 senesi Sarayda kene de tamir-tüzetme işleri başlandı. Ustalar Hansaraynı ilki qiyafetine ketirmege isteyler.
 
+==Resimler==
+
+;''Binalar''
+<gallery>
+Image:Hansaray1.jpg|Hansaray
+Image:Hansaray2.jpg|Şimaliy araba qapısı
+Image:Hansaray3.jpg|Meskün bina
+Image:Hansaray7.jpg|Arem binası
+</gallery>
+
+
+;''Odalar''
+<gallery>
+Image:Tränenbrunnen.jpg|Közyaş çeşmesi
+Image:Hansaray4.jpg|Altın çeşme
+Image:Hansaray5.jpg|Yazlıq qamere
+Image:Hansaray8.jpg|Arem içnde
+</gallery>
+
+
 [[Kategoriya:Qırım Hanlığı]]
 [[Kategoriya:Bağçasaray]]
+
 [[en:Bakhchisaray Palace]]
 [[fr:Hansaray]]
 [[tr:Hansaray]]
