*Empty MediaWiki Message*

--- a/Diyarbakır_(il).mw
+++ b/Diyarbakır_(il).mw
@@ -1,5 +1,5 @@
 [[Image:Diyarbakır_Turkey_Provinces_locator.jpg|300px|thumb|Diyarbakır vilâyeti]]
-'''Diyarbakır''' - Kurdistan´nin baskentidir yani Paytextê KURDÎSTA nê ye..
+'''Diyarbakır''' - Türkiye'nin nadide illerinden biridir...!!!
 
 {{Türkiyeniñ illeri}}
 
