*Empty MediaWiki Message*

--- a/Rage_Against_The_Machine.mw
+++ b/Rage_Against_The_Machine.mw
@@ -1,18 +1,16 @@
-Amerika Qoşma Ştatları'nda oturğan 4 kişilik bir rok çalğı taqımı.2000'de dağılmışlardır.Azaları:
+'''Rage Against The Machine''' - [[Amerika Qoşma Ştatları]]nda oturğan 4 kişilik bir rok çalğı taqımı. 2000 s. dağılğanlar. Azaları:
 
-*Zack de la Rocha-yırcı
-*Tim Commerford-gitaracı
-*Tom Morello-gitaracı
-*Brad Wilk-davulcı
+* Zack de la Rocha - yırcı
+* Tim Commerford - gitaracı
+* Tom Morello - gitaracı
+* Brad Wilk - davulcı
 
 
 ==Albomlar==
-*Rage Against The Machine-1992
-*Evil Empire-1996
-*The Battle Of Los Angeles-1999
-*Renegades-2000
-
-
+* Rage Against The Machine - 1992
+* Evil Empire - 1996
+* The Battle Of Los Angeles - 1999
+* Renegades - 2000
 
 [[Kategoriya:Rok muzıka]]
 
