*Empty MediaWiki Message*

--- a/Çubuqlı_davul.mw
+++ b/Çubuqlı_davul.mw
@@ -1,6 +1,9 @@
 [[Image:Karagoez davulcu2.jpg|thumb|right|300px|Çubuqlı davul]]
-*'''davul''' ({{lang-tr|davul}}
-*'''daul''', '''tapan''', '''tupan''' {{lang-bg|тъпан, тупан}})
+'''Çubuqlı davul''' iylengen buzav terisinden yapıla. Teri büyük qasnaqnıñ eki tarafına tarttırıla. Onıñ sağ tarafına ise çoqmarnen urula, sol tarafına ise çubuqnen urulıp çalına. Sağ tarafınıñ davuşı sol tarafına köre alçaqça ola. Davulnıñ qasnağına bir metrden ziyade uzunlıqta qayış pekitile. Bu qayışnen icracı davulnı boynuna asa ve ayaq üstünde turıp çala.
+
+Çeşit memleketlerde şu aletke böyle deyler:
+*'''davul''' ({{lang-tr|davul}})
+*'''tıpan''', '''tupan''' ({{lang-bg|тъпан, тупан}})
 *'''tapan''' {{lang-mk|тапан}}
 *'''tapan''', '''goč''' (goch) {{lang-sr|тапан, гоч}}
 *'''tabl''' ({{lang-ar|tabl}})
@@ -11,10 +14,9 @@
 *'''dowul'''({{lang-tk|dowul}}) 
 *'''çubuqlı davul'''({{lang-crh|çubuqlı davul}}) 
 *'''dobulbas'''({{lang-ky|dobulbas}}) 
-*'''vajskovy baraban'''({{lang-be|vajskovy baraban}})
-'''Çubuqlı davul''' iylengen buzav terisinden yapıla. Teri büyük qasnaqnıñ eki tarafına tarttırıla. Onıñ sağ tarafına ise çoqmarnen urula, sol tarafına ise çubuqnen urulıp çalına. Sağ tarafınıñ davuşı sol tarafına köre alçaqça ola. Davulnıñ qasnağına bir metrden ziyade uzunlıqta qayış pekitile. Bu qayışnen icracı davulnı boynuna asa ve ayaq üstünde turıp çala.
 
 [[Kategoriya:Qırımtatar milliy muzıkası]]
+
 [[en:davul]]
 [[de:Davul]]
 [[bg:Тъпан]]
