*Empty MediaWiki Message*

--- a/Çubuqlı_davul.mw
+++ b/Çubuqlı_davul.mw
@@ -4,15 +4,15 @@
 Çeşit memleketlerde şu aletke böyle deyler:
 *'''davul''' ({{lang-tr|davul}})
 *'''tıpan''', '''tupan''' ({{lang-bg|тъпан, тупан}})
-*'''tapan''' {{lang-mk|тапан}}
-*'''tapan''', '''goč''' (goch) {{lang-sr|тапан, гоч}}
+*'''tapan''' ({{lang-mk|тапан}})
+*'''tapan''', '''goç''' ({{lang-sr|тапан, гоч}})
 *'''tabl''' ({{lang-ar|tabl}})
 *'''daouli''' ({{lang-el|daouli}}),  literally meaning "drum"
 *'''lodra''' ({{lang-sq|lodra}})
 *'''doba''' ({{lang-ro|doba}})
 *'''[[Dhol|dāvūl]]''' ({{lang-fa|'''دهل''' dūhūl}})
-*'''dowul'''({{lang-tk|dowul}}) 
-*'''dobulbas'''({{lang-ky|dobulbas}}) 
+*'''dowul''' ({{lang-tk|dowul}}) 
+*'''dobulbas''' ({{lang-ky|dobulbas}}) 
 
 [[Kategoriya:Qırımtatar milliy muzıkası]]
 
