*Empty MediaWiki Message*

--- a/Veyisköy.mw
+++ b/Veyisköy.mw
@@ -50,7 +50,7 @@
 }}
 '''Veyisköy''' ({{lang-bg|Бобовец}}) – [[Bulğaristan]]da bir [[Bulğaristandaki Qırımtatar diasporası|Qırımtatar]] köyüdir.
 
-Mında yaşağan adamlarnıñ simalarından, tillerinden ve adetlerlerinden belli olğanına köre Veyisköyniñ ealisi, [[Çatallar]], [[Mumçul]], [[Doğanyuvası]] köyleriniñ ealileri kibi [[Qırım]]nıñ yalıboyu ya da dağ taraflarından bu topraqlarğa [[Aq Topraqlarğa icret|icret]] etkenler. <ref>[[Karadeniz gazetası]]. [http://aton.ttu.edu/pdf/KARADENIZ_Gazetesi_Nisan_2003.pdf Aprel 2003], s.5</ref>
+Mında yaşağan adamlarnıñ simalarından, tillerinden ve adetlerlerinden belli olğanına köre Veyisköyniñ ealisi, [[Çatallar]], [[Mumçul]], [[Doğanyuvası]] köyleriniñ ealileri kibi [[Qırım]]nıñ [[yalıboyu]] ya da dağ taraflarından bu topraqlarğa [[Aq Topraqlarğa icret|icret]] etkenler. <ref>[[Karadeniz gazetası]]. [http://aton.ttu.edu/pdf/KARADENIZ_Gazetesi_Nisan_2003.pdf Aprel 2003], s.5</ref>
 
 Veyisköylülerniñ müim bir qısmı 1950 senelerinde tekrardan icret etmege mecbur qalıp [[Türkiye]]ge ketkenler. [[İstanbul]]nıñ [[Taşlıtarla]] maallesini qurucısı olğan adamlar arasında işte bu muacirler de bardır.<ref>Murat Vatansever. [http://www.kirimdernegi.org/istanbul/bahcesaray/bulten.asp?sayi=30&yazi=13 ''Tatar Mahallesi: Taşlıtarla''] [[Bahçesaray mecmuası]], sañ 30</ref>
 
