The file [[:Image:Coat_of_arms_of_the_United_Kingdom.png]] has been removed, as it has been deleted by [[:commons:User:Kameraad Pjotr]]: ''[[w:commons:Commons:Licensing|Copyright violation]]: (copyvio from vectorimages.com, other version available: [

--- a/Büyük_Britaniya.mw
+++ b/Büyük_Britaniya.mw
@@ -4,7 +4,7 @@
 |Original adı = Great Britain
 |Resmiy Original adı =  United Kingdom of Great Britain and Northern Ireland
 |Bayraq =  Flag of the United Kingdom.svg
-|Gerb =  Coat_of_arms_of_the_United_Kingdom.png‎
+|Gerb =‎
 |Harita =  EU location UK.png
 |Şiar =  Dieu et mon droit
 |Şiar tercimesi = Allah ve menim aqqım 
