[[en:Crimean People's Republic]]

--- a/Qırım_Halq_Cumhuriyeti.mw
+++ b/Qırım_Halq_Cumhuriyeti.mw
@@ -94,6 +94,7 @@ Böyleliknen tarihta ilk Qırımtatar Cumhuriyeti yoq oldı.
 
 [[Kategoriya:Qırım tarihı]]
 
+[[en:Crimean People's Republic]]
 [[pl:Krymska Republika Ludowa]]
 [[tr:Kırım Halk Cumhuriyeti]]
 [[uk:Кримська Народна Республіка]]
