The file [[:Image:San_martin_independence.jpg]] has been replaced by [[:Image:La_Independencia_del_Perú.jpg]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Peru.mw
+++ b/Peru.mw
@@ -38,7 +38,7 @@
 '''Peru''' — [[Cenübiy Amerika]]da memleket.
 
 [[Image:Peru Machu Picchu Sunrise 2.jpg|thumb|left|[[Maçu Pikçu]] [[inkalar]]nıñ şeeri]]
-[[Image:San martin independence.jpg|thumb|left|[[Hose de San Martin]] Perunıñ mustaqilligini ilân ete, 1821 s.]]
+[[Image:La_Independencia_del_Perú.jpg|thumb|left|[[Hose de San Martin]] Perunıñ mustaqilligini ilân ete, 1821 s.]]
 [[Image:Angamos.jpg|thumb|right|Angamos uruşı]]
 [[Image:Casadepizarrolima.jpg|thumb|left|[[Pisarro]]nıñ evi]]
 [[Image:Alpamayo.jpg|thumb|left|Alpamayo]]
