--- a/Aqmescit.mw
+++ b/Aqmescit.mw
@@ -4,7 +4,7 @@
  |original adı               = ''ukr.'' Сімферополь<br>''rus.'' Симферополь
  |memleket                   = Ukraina
  |gerb                       = Simferopol-COA.gif
- |bayraq                     = Simferopol.flag.gif
+ |bayraq                     =Flag_of_Simferopol.gif
  |gerb eni                   = 
  |bayraq eni                 = 
   |lat_deg = 44 |lat_min = 56 |lat_sec = 53
