*Empty MediaWiki Message*

--- a/Qırımtatar_elifbesi.mw
+++ b/Qırımtatar_elifbesi.mw
@@ -35,6 +35,7 @@
 | style="width:3em; text-align:center; padding: 3px;" | V v
 | style="width:3em; text-align:center; padding: 3px;" | Y y
 | style="width:3em; text-align:center; padding: 3px;" | Z z
+| style="width:3em; text-align:center; padding: 3px;" | 
 |}
 '''Â â''' işareti ayrı bir arif degil de, ögünde turğan tutuq sesni yımşatuv işareti olaraq qullanılır.
 
