*Empty MediaWiki Message*

--- a/Qırımtatar_kiril_elifbesi.mw
+++ b/Qırımtatar_kiril_elifbesi.mw
@@ -42,6 +42,9 @@
 | style="width:3em; text-align:center; padding: 3px;" | Э э
 | style="width:3em; text-align:center; padding: 3px;" | Ю ю
 | style="width:3em; text-align:center; padding: 3px;" | Я я
+| style="width:3em; text-align:center; padding: 3px;" | 
+| style="width:3em; text-align:center; padding: 3px;" | 
+| style="width:3em; text-align:center; padding: 3px;" | 
 |}
 '''гъ''', '''къ''', '''нъ''' ve '''дж''' ayrı ariflerdir (sözler elifbe tertibi boyunca tizüv içün müimdir, misal olaraq luğatlarda).
 
