The file [[:Image:IndiaLocation.png]] has been replaced by [[:Image:LocationIndia.png]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/İndistan.mw
+++ b/İndistan.mw
@@ -10,7 +10,7 @@
 |Gerb =  Emblem of India.svg
 |Şiar =  ''Satyameva Jayate''
 |Şiar tercimesi = Truth Alone Triumphs 
-|Harita =  IndiaLocation.png
+|Harita =LocationIndia.png
 |Gimn =  Jana Gana Mana
 |Gimn tercimesi=
 |Til =  [[Hindi]], [[İngliz tili]] ve daa 21 resmiy til
