--- a/Dare.mw
+++ b/Dare.mw
@@ -2,9 +2,23 @@
 '''Dare''' mahsus azırlanğan [[ağaç]] qasnaqqa [[qoy]], [[eçki]] yaki [[balıq]] terisi tarttırılıp yapıla. Qasnaqnıñ çetleri oyulıp, anda tögerek etip kesilgen yezden üç-dört çift zil pekitile. Qasnaqnıñ özü emen ağaçından qayırılıp yapıla. Dare çaluv ustalığı dareciden büyük canbazlıq talap ete. Dare hususan [[Qırım]]nıñ [[çöl tarafı]]nda ziyade qullanıla, onsuz iç bir tantana, iç bir cıyın olmay edi.
 
 [[Kategoriya:Qırımtatar milliy muzıkası]]
-[[bg:Дайре]]
-[[hr:Dajre]]
-[[mk:%D0%94%D0%B0%D1%98%D1%80%D0%B5]]
-[[sr:Даире (инструмент)]]
-[[tg:Доира]]
-[[en:Dayereh]]
+[[de:Tamburin]]
+[[et:Tamburiin]]
+[[es:Pandereta]]
+[[eo:Tamburino]]
+[[eu:Pandero]]
+[[fr:Tambourin (musique)]]
+[[gl:Pandeireta]]
+[[it:Tamburello basco]]
+[[he:תוף מרים]]
+[[mk:Дајре]]
+[[nl:Tamboerijn]]
+[[ja:タンブリン]]
+[[ug:كىچىك دۇمباق]]
+[[pl:Bębenek baskijski]]
+[[pt:Pandeireta]]
+[[ru:Бубен]]
+[[fi:Tamburiini]]
+[[sv:Tamburin]]
+[[tr:Tef]]
+[[uk:Бубон]]
