*Empty MediaWiki Message*

--- a/Dare.mw
+++ b/Dare.mw
@@ -3,6 +3,7 @@
 
 [[Kategoriya:Qırımtatar milliy muzıkası]]
 [[de:Tamburin]]
+[[en:Tambourine]]
 [[et:Tamburiin]]
 [[es:Pandereta]]
 [[eo:Tamburino]]
