--- a/Aşağı_sorb_tili.mw
+++ b/Aşağı_sorb_tili.mw
@@ -91,6 +91,7 @@
 [[ko:고지 소르브어]]
 [[li:Nedersorbisch]]
 [[mk:Долнолужички јазик]]
+[[nl:Nedersorbisch]]
 [[pl:Język dolnołużycki]]
 [[ro:Limba sorabă de jos]]
 [[ru:Нижнелужицкий язык]]
