*Empty MediaWiki Message*

--- a/Bükreş.mw
+++ b/Bükreş.mw
@@ -18,7 +18,7 @@
  |cedvelde region1 adı = 
  |içki bölünüv = 
  |baş türü = primar
- |baş = Adrian Vidânu
+ |baş = [[Sorin Oprescu]]
  |temeli qoyulğan tarihı = 
  |ilki añıluv =  1459
  |evelki adları = 
