--- a/Bükreş.mw
+++ b/Bükreş.mw
@@ -18,7 +18,7 @@
  |cedvelde region1 adı = 
  |içki bölünüv = 
  |baş türü = primar
- |baş = [[Sorin Oprescu]]
+ |baş = [[Sorin Opresku]] (Sorin Oprescu)
  |temeli qoyulğan tarihı = 
  |ilki añıluv =  1459
  |evelki adları = 
