--- a/Yuqarı_Sorb_tili.mw
+++ b/Yuqarı_Sorb_tili.mw
@@ -98,6 +98,7 @@
 [[ko:저지 소르브어]]
 [[li:Oppersorbisch]]
 [[mk:Горнолужички јазик]]
+[[nl:Oppersorbisch]]
 [[pl:Język górnołużycki]]
 [[pt:Alto sorábio]]
 [[ro:Limba sorabă de sus]]
