--- a/Qırım_Hanlığı.mw
+++ b/Qırım_Hanlığı.mw
@@ -26,6 +26,7 @@
 [[de:Khanat der Krim]]
 [[en:Crimean Khanate]]
 [[es:Janato de Crimea]]
+[[eo:Krimea Ĥanlando]]
 [[fi:Krimin kaanikunta]]
 [[fr:Khanat de Crimée]]
 [[ga:Cánacht na Crimé]]
