*Empty MediaWiki Message*

--- a/Qırım_Hanlığı.mw
+++ b/Qırım_Hanlığı.mw
@@ -3,7 +3,7 @@
 |Original adı  = Qırım Yurtu, <big>قريم يورتى</big>
 |Seneler   = 1449 – 1783
 |Bayraq =
-|Harita = 1600.gif
+|Harita = Crimean Khanate 1600.gif
 |Harita tasviri = 1600 senesindeki Qırım Hanlığı
 |Paytaht = [[Bağçasaray]]
 |Til = [[Eski qırımtatar tili]], [[Osmanlı tili]]
