*Empty MediaWiki Message*

--- a/Devlet_qurumı.mw
+++ b/Devlet_qurumı.mw
@@ -6,7 +6,7 @@ Akimiyet organlarınıñ qurumına köre:
 ** [[Prezident cumhuriyeti]]
 ** [[Parlament cumhuriyeti]]
 ** [[Qarışıq cumhuriyet]]
-* [[Mutlaqiyet]] 
+* [[Mutlaqiyet]] (monarhiya)
 ** [[Absolüt mutlaqiyeti]]
 ** [[Esasqanuniy mutlaqiyet]]
 ** [[Parlament mutlaqiyeti]]
