*Empty MediaWiki Message*

--- a/Ermeni_Bazar.mw
+++ b/Ermeni_Bazar.mw
@@ -80,6 +80,7 @@ Esas müessiselerden ekşilik, maden kübrelerni çıqarğan zavodnı, yengil sa
 
 [[en:Armyansk]]
 [[eo:Armjansko]]
+[[fr:Armiansk]]
 [[pl:Armiańsk]]
 [[ro:Armiansk]]
 [[ru:Армянск]]
