The file [[:Image:Antarctica_satellite_orthographic.jpg]] has been replaced by [[:Image:Antarctica_6400px_from_Blue_Marble.jpg]] by administrator [[:commons:User:Rlevse]]: ''Was in category "Duplicate", although NOT an exact duplicate''. ''[[m:User:C

--- a/Antarktida.mw
+++ b/Antarktida.mw
@@ -1,5 +1,5 @@
 [[Resim:LocationAntarctica.png|thumb|250px|Dünya haritasında Antarktida]]
-[[Resim:Antarctica satellite orthographic.jpg|thumb|250px]]
+[[Resim:Antarctica_6400px_from_Blue_Marble.jpg|thumb|250px]]
 '''Antarktida''' - cenübiy yarım kürreniñ eñ cenübinde bulunğan bir qıta. Antarktidada Yerniñ [[Cenübiy qutup|Cenübiy qutubı]] bar.
  
 {{commons|Antarctica}}
