*Empty MediaWiki Message*

--- a/Dağlıq_Qarabağ.mw
+++ b/Dağlıq_Qarabağ.mw
@@ -1,5 +1,4 @@
-'''Dağlıq Qarabaq''', resmiy adı '''Dağlıq Qarabaq ''' ([[Ermeni tili|ermenice]] Լեռնային Ղարաբաղ
-- ğarbiy [[Asiya]]da cenübiy [[Kavkaz]] regiоnında yerleşken bir memleket.
+'''Dağlıq Qarabağ''' ([[azerbaycan tili|azerice]] ''Dağlıq Qarabağ'', [[Ermeni tili|ermenice]] Լեռնային Ղարաբաղ ya da Արցախ) - ğarbiy [[Asiya]]da cenübiy [[Kavkaz]] regiоnında yerleşken bir memleket. Milletlerara qanunlar binaen Dağlıq Qarabağ [[Azerbaycan]]nıñ bir parçasıdır, aslında ise ermeniler tarafından kontrol etilgen mustqail bir devlet.
 
 [[Resim:Nagorno-Karabakh Occupation Map.jpg|250px|right|thumb|Dağlıq Qarabağ]]
 
