*Empty MediaWiki Message*

--- a/Yeudilik.mw
+++ b/Yeudilik.mw
@@ -1,4 +1,3 @@
-'''Yeudilik''' (yeudi tili  יהודה, Yehudah) - tek tañrılı İbraimiy dinlerniñ ilkiñncısıdır, üç cian dinleriniñ biridir. Yeudilik peyğamberi Musa . Yeudilikiñ muqaddes kitabı Tevratdır.
+'''Yeudilik''' ([[ibrani tili|ibranice]] יהודה - ''Yehudah'') - tek tañrılı İbraimiy dinlerniñ ilkidir. Yeudilik peyğamberi [[Musa]]. Yeudilikiñ muqaddes kitabı [[Tevrat]]tır.
 
-[[Category:Din]]
-[[Category:Yeudilik]]
+[[Kategoriya:Yeudilik]]
