--- a/Yeudilik.mw
+++ b/Yeudilik.mw
@@ -1,3 +1,3 @@
 '''Yeudilik''' ([[ibrani tili|ibranice]] יהודה - ''Yehudah'') - tek tañrılı İbraimiy dinlerniñ ilkidir. Yeudilik peyğamberi [[Musa]]. Yeudilikiñ muqaddes kitabı [[Tevrat]]tır.
 
-[[Kategoriya:Yeudilik]]
+[[Kategoriya:Yeudilik| ]]
