*Empty MediaWiki Message*

--- a/Canköy.mw
+++ b/Canköy.mw
@@ -81,6 +81,7 @@ Yıllıq yağanaqlar — 418 mm.
 [[de:Dschankoj]]
 [[en:Dzhankoy]]
 [[eo:Ĝankojo]]
+[[fr:Djankoï]]
 [[pl:Dżankoj]]
 [[ro:Dzhankoy]]
 [[ru:Джанкой]]
