*Empty MediaWiki Message*

--- a/Bağçasaray.mw
+++ b/Bağçasaray.mw
@@ -103,6 +103,7 @@ Cenkten soñ [[Eski Yurt]], [[Aziz]], [[Aqçoqraq]] ve [[Salaçıq]] (Staroselye
 [[de:Bachtschyssaraj]]
 [[en:Bakhchisaray]]
 [[eo:Baĥĉisarajo]]
+[[fr:Bakhtchyssaraï]]
 [[it:Bachčysaraj]]
 [[ja:バフチサライ]]
 [[kk:Бақшасарай]]
