*Empty MediaWiki Message*

--- a/Krasnoperekopsk.mw
+++ b/Krasnoperekopsk.mw
@@ -61,6 +61,7 @@
 [[de:Krasnoperekopsk]]
 [[en:Krasnoperekopsk]]
 [[eo:Krasnoperekopsko]]
+[[fr:Krasnoperekopsk]]
 [[pl:Krasnoperekopsk]]
 [[ro:Krasnoperekopsk]]
 [[ru:Красноперекопск]]
