*Empty MediaWiki Message*

--- a/Saq.mw
+++ b/Saq.mw
@@ -101,6 +101,7 @@ Beşinci kilometrde deñizcilerniñ, [[Kezlev deñiz desantı|deñiz desantını
 [[en:Saky]]
 [[eo:Sako (Krimeo)]]
 [[et:Saki (linn)]]
+[[fr:Saky]]
 [[pl:Saki (miasto)]]
 [[ro:Saky]]
 [[ru:Саки (город)]]
