*Empty MediaWiki Message*

--- a/Avropa_Birligi.mw
+++ b/Avropa_Birligi.mw
@@ -1,6 +1,8 @@
 [[Resim:Flag of Europe.svg|thumb|right|200px|Avropa Birliği bayrağı]]
 '''Avropa Birliği''' ([[İngliz tili]]: European Union, [[Frenk tili]]: Union européenne)
 
+{{Avropa Birligi}}
+
 [[Kategoriya:Avropa]]
 
 {{Link FA|hu}}
