*Empty MediaWiki Message*

--- a/Avropa_Birligi.mw
+++ b/Avropa_Birligi.mw
@@ -1,5 +1,5 @@
 [[Resim:Flag of Europe.svg|thumb|right|200px|Avropa Birliği bayrağı]]
-'''Avropa Birliği''' ([[İngliz tili]]: European Union, [[Frenk tili]]: Union européenne)
+'''Avropa Birliği''' ya da '''AB''' ([[İngliz tili]]: ''European Union'', [[Frenk tili]]: ''Union européenne'')
 
 {{Avropa Birligi}}
 
