*Empty MediaWiki Message*

--- a/Avropa_Birligi.mw
+++ b/Avropa_Birligi.mw
@@ -1,5 +1,5 @@
 [[Resim:Flag of Europe.svg|thumb|right|200px|Avropa Birliği bayrağı]]
-'''Avropa Birliği''' ya da '''AB''' ([[İngliz tili]]: ''European Union'', [[Frenk tili]]: ''Union européenne'')
+'''Avropa Birliği''' ya da '''AB''' ([[İngliz tili]]: ''European Union'', [[Frenk tili]]: ''Union européenne'') [[Avropa]]'da birlik. Paytahtı [[Lüksemburg şeeri|Lüksemburg]] , eñ balaban şeeri [[London]]dur.
 
 {{Avropa Birligi}}
 
